--- a/Reactor/packages.config
+++ b/Reactor/packages.config
@@ -3,5 +3,6 @@
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="OpenTK" version="1.1.1589.5942" targetFramework="net45" />
+  <package id="OpenTK.GLControl" version="1.1.1589.5942" targetFramework="net45" />
   <package id="SharpFont" version="2.5.3.0" targetFramework="net45" />
 </packages>
