--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -93,10 +93,6 @@
     <Reference Include="Ionic.Zip">
       <HintPath>packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK.GLControl, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\OpenTK.GLControl.1.1.1589.5942\lib\NET40\OpenTK.GLControl.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -117,6 +113,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="AssimpNet">
       <HintPath>..\ThirdParty\Windows\AssimpNet.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK.GLControl">
+      <HintPath>packages\OpenTK.GLControl.1.1.1589.5942\lib\NET40\OpenTK.GLControl.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -254,6 +253,7 @@
     <Compile Include="Types\RTextureSprite.cs" />
     <Compile Include="Types\RPixelFormat.cs" />
     <Compile Include="Types\States\RTargetBlendState.cs" />
+    <Compile Include="Types\RShaderSemantics.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
