--- a/Reactor/packages.config
+++ b/Reactor/packages.config
@@ -2,8 +2,7 @@
 <packages>
   <package id="DotNetZip" version="1.9.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="OpenTK.Next" version="1.2.2336.6514-pre" targetFramework="net45" />
-  <package id="OpenTK.Next.GLControl" version="1.2.2336.6514-pre" targetFramework="net45" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net45" />
   <package id="SharpFont" version="3.0.1" targetFramework="net45" />
   <package id="SharpFont.Dependencies" version="2.6" targetFramework="net45" />
 </packages>
