--- a/Reactor/packages.config
+++ b/Reactor/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.9.6" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="OpenTK" version="2.0.0" targetFramework="net45" />
-  <package id="SharpFont" version="3.0.1" targetFramework="net45" />
-  <package id="SharpFont.Dependencies" version="2.6" targetFramework="net45" />
+  <package id="AssimpNet" version="4.1.0" targetFramework="net45" />
+  <package id="DotNetZip" version="1.13.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="OpenTK" version="3.0.1" targetFramework="net45" />
 </packages>
